--- a/src/App.css
+++ b/src/App.css
@@ -94,45 +94,7 @@
 }
 
 .credits-shape {
-  clip-path: polygon(
-    0% 0%,
-    3% 3.1%,
-    6% 6.2%,
-    9% 9.3%,
-    12% 12.4%,
-    15% 15.5%,
-    18% 18.6%,
-    21% 21.7%,
-    24% 24.8%,
-    27% 27.9%,
-    30% 31%,
-    33% 34.1%,
-    36% 37.2%,
-    39% 40.3%,
-    42% 43.4%,
-    45% 46.5%,
-    48% 49.6%,
-    51% 52.7%,
-    54% 55.8%,
-    57% 58.9%,
-    60% 62%,
-    63% 65.1%,
-    66% 68.2%,
-    69% 71.3%,
-    72% 74.4%,
-    75% 77.5%,
-    78% 80%,
-    81% 77.5%,
-    84% 75%,
-    87% 72.5%,
-    90% 70%,
-    93% 67.5%,
-    96% 65%,
-    99% 62.5%,
-    100% 62%,
-    100% 100%,
-    0% 100%
-  );
+  clip-path: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><defs><clipPath id="p" clipPathUnits="objectBoundingBox"><polygon points="0 0, .03 .031, .06 .062, .09 .093, .12 .124, .15 .155, .18 .186, .21 .217, .24 .248, .27 .279, .3 .31, .33 .341, .36 .372, .39 .403, .42 .434, .45 .465, .48 .496, .51 .527, .54 .558, .57 .589, .6 .62, .63 .651, .66 .682, .69 .713, .72 .744, .75 .775, .78 .8, .81 .775, .84 .75, .87 .725, .9 .7, .93 .675, .96 .65, .99 .625, 1 .62, 1 1, 0 1"/></clipPath></defs></svg>#p');
   background: var(--footer-slash);
   width: 100%;
   position: absolute;
